--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document1</title>
+    <title>Moja druga strona</title>
 </head>
 <body>
-
-    <p> Poczatekk</p>
+     <h1>Nowa strona 2021</h1>
+    <p> Jest to moja druga strona</p>
     
 </body>
 </html>
