--- a/index.html
+++ b/index.html
@@ -1,12 +1,32 @@
-<html lang="pl">
+<html>
+
+</html>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Moja druga strona</title>
+    <link rel= "stylesheet" type= "tekst/css" href= "css/main.css">
 </head>
+
 <body>
-     <h1>Nowa strona 2021</h1>
-    <p> Jest to moja druga strona</p>
-    
+     <h1>Najwyższe budynki na świecie </h1>
+     <h1>Burj Khalifa - Dubaj, Zjednoczone Emiraty Arabskie</h1>
+     <p> Od dekady zbudowany za kwotę 1,5 mld dol. Burj Khalifa jest najwyższym budynkiem na świecie. Centralny rdzeń oraz trzy ramiona, z których składa się dubajski wieżowiec, to nawiązanie do kwiatu pustyni.<small> Wysokość: 829 m  </small>                             </p>
+     <hr>
+     <br>
+
+    <h2>Shanghai Tower - Szanghaj, Chiny</h2>
+    <p> Shanghai Tower to najwyższy budynek w Chinach. Jego budowa kosztowała 2,4 mld dol.<mark> Wysokość: 632 m  </mark> </p>
+    <hr>
+     <br>
+
+    <h3>Abradż al-Bajt  - Mekka, Arabia Saudyjska</h3>
+    <p> Jest to postmodernistyczny kompleks hotelowy, wzniesiony według projektu zespołu architektów biura architektonicznego SL Rasch. Obiekt znajduje się w bezpośrednim sąsiedztwie Świętego Meczetu. Jest to też najwyższy hotel na świecie, ma też najwyżej umieszczony zegar wieżowy na naszym globie.<sub> Wysokość: 601 m  </sub> </p>
+    <hr>
+     <br>
+    <h4>Ping An Finance Centern - Shenzhen, Chiny</h4>
+    <p> <pre>Rok ukończenia: 2017</pre>Ping An Finance Centern to najwyższy budynek na świecie, który jest wyłącznie biurowcem.<sup> Wysokość: 699,3 m  </sup> </p>
+    <hr>
+     <br>
 </body>
 </html>
