--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
 <body>
      <h1>Najwyższe budynki na świecie </h1>
+     <img src="zdj/kalifa" alt="Khalifa">
+     <br>
      <h1>Burj Khalifa - Dubaj, Zjednoczone Emiraty Arabskie</h1>
      <p> Od dekady zbudowany za kwotę 1,5 mld dol. Burj Khalifa jest najwyższym budynkiem na świecie. Centralny rdzeń oraz trzy ramiona, z których składa się dubajski wieżowiec, to nawiązanie do kwiatu pustyni.<small> Wysokość: 829 m  </small>                             </p>
      <hr>
