--- a/index.html
+++ b/index.html
@@ -5,30 +5,68 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Moja druga strona</title>
-    <link rel= "stylesheet" type= "tekst/css" href= "css/main.css">
+    <link rel= "stylesheet" type= "text/css" href= "../Projekt1/main.css">
+    
 </head>
 
 <body>
-     <h1>Najwyższe budynki na świecie </h1>
-     <img src="zdj/kalifa" alt="Khalifa">
-     <br>
-     <h1>Burj Khalifa - Dubaj, Zjednoczone Emiraty Arabskie</h1>
-     <p> Od dekady zbudowany za kwotę 1,5 mld dol. Burj Khalifa jest najwyższym budynkiem na świecie. Centralny rdzeń oraz trzy ramiona, z których składa się dubajski wieżowiec, to nawiązanie do kwiatu pustyni.<small> Wysokość: 829 m  </small>                             </p>
-     <hr>
-     <br>
 
-    <h2>Shanghai Tower - Szanghaj, Chiny</h2>
-    <p> Shanghai Tower to najwyższy budynek w Chinach. Jego budowa kosztowała 2,4 mld dol.<mark> Wysokość: 632 m  </mark> </p>
-    <hr>
-     <br>
+    <div id="Naglowek">
 
-    <h3>Abradż al-Bajt  - Mekka, Arabia Saudyjska</h3>
-    <p> Jest to postmodernistyczny kompleks hotelowy, wzniesiony według projektu zespołu architektów biura architektonicznego SL Rasch. Obiekt znajduje się w bezpośrednim sąsiedztwie Świętego Meczetu. Jest to też najwyższy hotel na świecie, ma też najwyżej umieszczony zegar wieżowy na naszym globie.<sub> Wysokość: 601 m  </sub> </p>
-    <hr>
-     <br>
-    <h4>Ping An Finance Centern - Shenzhen, Chiny</h4>
-    <p> <pre>Rok ukończenia: 2017</pre>Ping An Finance Centern to najwyższy budynek na świecie, który jest wyłącznie biurowcem.<sup> Wysokość: 699,3 m  </sup> </p>
-    <hr>
-     <br>
+        <h1>Najwyższe budynki na świecie </h1>
+        <img src="zdj/kalifa" alt="Khalifa">
+    </div>
+
+    <div id="Opis">
+        <br>
+        <h1>Burj Khalifa - Dubaj, Zjednoczone Emiraty Arabskie</h1>
+        <p> Od dekady zbudowany za kwotę 1,5 mld dol. Burj Khalifa jest najwyższym budynkiem na świecie. Centralny rdzeń oraz trzy ramiona, z których składa się dubajski wieżowiec, to nawiązanie do kwiatu pustyni.<small> Wysokość: 829 m</small></p>
+        <hr>
+        <br>
+
+        <h2>Shanghai Tower - Szanghaj, Chiny</h2>
+        <p> Shanghai Tower to najwyższy budynek w Chinach. Jego budowa kosztowała 2,4 mld dol.<mark> Wysokość: 632 m</mark></p>
+        <hr>
+        <br>
+
+        <h3>Abradż al-Bajt  - Mekka, Arabia Saudyjska</h3>
+        <p> Jest to postmodernistyczny kompleks hotelowy, wzniesiony według projektu zespołu architektów biura architektonicznego SL Rasch. Obiekt znajduje się w bezpośrednim sąsiedztwie Świętego Meczetu.<br>Jest to też najwyższy hotel na świecie, ma też najwyżej umieszczony zegar wieżowy na naszym globie.<sub> Wysokość: 601 m</sub></p>
+        <hr>
+        <br>
+        <h4>Ping An Finance Centern - Shenzhen, Chiny</h4>
+        <p> <pre>Rok ukończenia: 2017</pre>Ping An Finance Centern to najwyższy budynek na świecie, który jest wyłącznie biurowcem.<sup> Wysokość: 699,3 m</sup></p>
+        <hr>
+        <br>
+        </div>
+
+     <div id="Lista">
+     <ol>
+        <li><a href="https://pl.wikipedia.org/wiki/Lista_najwy%C5%BCszych_budynk%C3%B3w">Najwyższe budynki</a></li>
+
+        <li><a href="https://pl.wikipedia.org/wiki/Lista_najwy%C5%BCszych_budynk%C3%B3w_w_Warszawie">Lista najwyższych budynków w Warszawie</a></li>
+
+        <li><a href="https://inzynieria.com/budownictwo/wiezowce/rankingi/57670,najwyzsze-budynki-swiata-ranking">Najwyższe budynki świata – ranking</a></li>
+    </ol>
+    </div>
+        <div id="Definicja">
+        <dl>
+            <dt><b>Budynek</b></dt>
+                <dd> Szczególny rodzaj budowli lub jej część, w zakresie której wydzielono poprzez przegrody budowlane, takie jak ściany zewnętrzne i dach lub stropodach, przestrzeń użytkowaną przez człowieka w rozmaity sposób (funkcja mieszkalna, magazynowa, techniczna, produkcyjna, przechowywania zwierząt, przechowywania dzieł sztuki itp.). Przestrzeń ta może być wewnętrznie dzielona poprzez elementy budynku takie jak ściany wewnętrzne i stropy</dd>
+    </dl>
+    </div>
+
+    <div class="Kontakt">
+            <h1>Telefon</h1>
+            <p>667333466</p>
+    </div>
+
+    <div class="Kontakt">
+            <h1>e-mail</h1>
+            <p>piotrekzak7@gmail.com</p>
+    </div>
+    <script type="text/javascript" src="../Projekt1/skrypty/main.js">
+
+    </script>
+ 
 </body>
 </html>
