css edycja commit

--- a/index.html
+++ b/index.html
@@ -11,10 +11,14 @@
 
 <body>
 
+    <div id="Top">
+        <img class="kalifa" src="zdj/kalifa" alt="Khalifa">
+    </div>
+
     <div id="Naglowek">
 
         <h1>Najwyższe budynki na świecie </h1>
-        <img src="zdj/kalifa" alt="Khalifa">
+       
     </div>
 
     <div id="Opis">
