--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     
 </head>
 
-<body>
+<body style="background-color:powderblue;">
 
     <div id="Top">
         <img class="kalifa" src="zdj/kalifa" alt="Khalifa">
@@ -43,21 +43,23 @@
         <br>
         </div>
 
-     <div id="Lista">
-     <ol>
-        <li><a href="https://pl.wikipedia.org/wiki/Lista_najwy%C5%BCszych_budynk%C3%B3w">Najwyższe budynki</a></li>
-
-        <li><a href="https://pl.wikipedia.org/wiki/Lista_najwy%C5%BCszych_budynk%C3%B3w_w_Warszawie">Lista najwyższych budynków w Warszawie</a></li>
-
-        <li><a href="https://inzynieria.com/budownictwo/wiezowce/rankingi/57670,najwyzsze-budynki-swiata-ranking">Najwyższe budynki świata – ranking</a></li>
-    </ol>
-    </div>
         <div id="Definicja">
         <dl>
             <dt><b>Budynek</b></dt>
                 <dd> Szczególny rodzaj budowli lub jej część, w zakresie której wydzielono poprzez przegrody budowlane, takie jak ściany zewnętrzne i dach lub stropodach, przestrzeń użytkowaną przez człowieka w rozmaity sposób (funkcja mieszkalna, magazynowa, techniczna, produkcyjna, przechowywania zwierząt, przechowywania dzieł sztuki itp.). Przestrzeń ta może być wewnętrznie dzielona poprzez elementy budynku takie jak ściany wewnętrzne i stropy</dd>
     </dl>
     </div>
+
+    <div id="Lista">
+        <h1>Linki</h1>
+    <ol>
+       <li><a href="https://pl.wikipedia.org/wiki/Lista_najwy%C5%BCszych_budynk%C3%B3w">Najwyższe budynki</a></li>
+
+       <li><a href="https://pl.wikipedia.org/wiki/Lista_najwy%C5%BCszych_budynk%C3%B3w_w_Warszawie">Lista najwyższych budynków w Warszawie</a></li>
+
+       <li><a href="https://inzynieria.com/budownictwo/wiezowce/rankingi/57670,najwyzsze-budynki-swiata-ranking">Najwyższe budynki świata – ranking</a></li>
+   </ol>
+   </div>
 
     <div class="Kontakt">
             <h1>Telefon</h1>
