--- a/index.html
+++ b/index.html
@@ -69,6 +69,12 @@
     <div class="Kontakt">
             <h1>e-mail</h1>
             <p>piotrekzak7@gmail.com</p>
+
+            <footer class="Stopka">
+                <h5></h5>
+                <p>Copyright by Piotr Żak 2021</p>
+              </footer>
+
     </div>
     <script type="text/javascript" src="../Projekt1/skrypty/main.js">
 
