--- a/index1.html
+++ b/index1.html
@@ -18,17 +18,47 @@
     </div>
     <div id="Tekst2">
 
-    <p>More content</p>
-    <span>kolejny kolor</span>
+        <p>More content</p>
+        <span>kolejny kolor</span>
 
     </div>
+<article>
+    <h1>Skoki</h1>
 
+    <p>Ośmiu Polaków z lokatą w czołowej "10" zawodów PŚ w tym sezonie. Teraz już nie można wątpić w słuszność pomysłu połączenia kadr</p>
+    <p>Kamil Stoch nie wygrał czwartego z rzędu konkursu Pucharu Świata.</p>
+    <p>Stoch miał wyjątkowego pecha, gdyż w obu skokach musiał zmagać się z potężnym wiatrem w plecy</p>
+    <p>Eksperci w komentarzach zwrócili uwagę na fatalne warunki, w których skakał reprezentant Polski</p>
+
+</article>
+<br>
+<article>
+    <h1>Piłka nożna</h1>
+
+    <p>Arkadiusz Milik stał się jednym z najbardziej rozchwytywanych zawodników na rynku transferowym. Możliwość zatrudnienia polskiego napastnika za darmo skusiła wiele klubów.</p>
+    <p>Jak twierdzi „Telefoot" PSG i Neymar przystąpiły do rozmów nad nowym kontraktem dla zawodnika. Oprócz niebotycznych zarobków jeszcze dwie sprawy mogą mieć wpływ na ostateczną decyzję Brazylijczyka dot. jego przyszłości w Paris Saint-Germain.</p>
+    <p>Robert Lewandowski zajmuje trzynaste miejsce na liście piłkarzy z największą liczbą goli w historii. Jego łączny dorobek z całej dotychczasowej kariery to 517 trafień. Licznik jednak wciąż bije, a Polak może wkrótce przegonić paru rywali.</p>
+    <p>Real Valladolid przegrał na Estadio Jose Zorrilla z Valencią 0:1 w niedzielnym meczu 18. kolejki LaLigi. Gola na wagę trzech punktów zdobył w końcówce spotkania Carlos Soler.
+</article>
+
+<article>
+    <h1>Tenis</h1>
+
+    <p>Iga Świątek zajęła drugie miejsce w plebiscycie "Przeglądu Sportowego" na najlepszego sportowca Polski w 2020 roku. </p>
+    <p>Hubert Hurkacz łatwo wygrał pierwszy mecz w 2021 roku. Polak nie dał żadnych szans Kolumbijczykowi Danielowi Elahiemu Galanowi i awansował do ćwierćfinału turnieju ATP 250 w Delray Beach.</p>
+    <p>Sofia Kenin na ćwierćfinale zakończyła występ w turnieju WTA 500 w Abu Zabi. Amerykanka uległa Greczynce Marii Sakkari, a w trzecim secie nie zdobyła nawet gema.</p>
+    <p>Dwie najważniejsze organizacje tenisowe – ATP i WTA – ogłosiły, jakie turnieje mają się odbyć w 2021 roku. Czy się odbędą, to jednak odrębna sprawa.</p>
+
+</article>
 
 <ul>
-    <li>samochod</li>
-    <li>drzewo</li>
-    <li>kot</li>
-</ul>
+    <li>Stoch</li>
+    <li>Zyla</li>
+    <li>Kubacki</li>
+    <li>Stekala</li>
+    <li>Wolny</li>
+    <li>Kot</li>
+</ul> 
 
 
 </body>
