--- a/index1.html
+++ b/index1.html
@@ -10,20 +10,20 @@
     </head>
     <body>
 
-    <div id="Tekst1">
-        <h1>Kolory</h1>
-            <p>Test kolorow</p>
-            <p>kolory</p>
-            <p>inne</p>
-    </div>
-    <div id="Tekst2">
+        <div id="Tekst1">
+            <h1>Strona testowa</h1>
+                <p>Test 1</p>
+                <p>Test 2</p>
+                <p>Test 3</p>
+        </div>
+        <div id="Tekst2">
 
-        <p>More content</p>
-        <span>kolejny kolor</span>
+            <p>Test 4</p>
+            <span>Test 5</span>
 
-    </div>
+        </div>
 <article>
-    <h1>Skoki</h1>
+    <h1>Skoki narciarskie</h1>
 
     <p>Ośmiu Polaków z lokatą w czołowej "10" zawodów PŚ w tym sezonie. Teraz już nie można wątpić w słuszność pomysłu połączenia kadr</p>
     <p>Kamil Stoch nie wygrał czwartego z rzędu konkursu Pucharu Świata.</p>
@@ -33,7 +33,7 @@
 </article>
 <br>
 <article>
-    <h1>Piłka nożna</h1>
+    <h2>Piłka nożna</h2>
 
     <p>Arkadiusz Milik stał się jednym z najbardziej rozchwytywanych zawodników na rynku transferowym. Możliwość zatrudnienia polskiego napastnika za darmo skusiła wiele klubów.</p>
     <p>Jak twierdzi „Telefoot" PSG i Neymar przystąpiły do rozmów nad nowym kontraktem dla zawodnika. Oprócz niebotycznych zarobków jeszcze dwie sprawy mogą mieć wpływ na ostateczną decyzję Brazylijczyka dot. jego przyszłości w Paris Saint-Germain.</p>
@@ -42,13 +42,15 @@
 </article>
 
 <article>
-    <h1>Tenis</h1>
+    <h3>Tenis</h3>
 
     <p>Iga Świątek zajęła drugie miejsce w plebiscycie "Przeglądu Sportowego" na najlepszego sportowca Polski w 2020 roku. </p>
     <p>Hubert Hurkacz łatwo wygrał pierwszy mecz w 2021 roku. Polak nie dał żadnych szans Kolumbijczykowi Danielowi Elahiemu Galanowi i awansował do ćwierćfinału turnieju ATP 250 w Delray Beach.</p>
     <p>Sofia Kenin na ćwierćfinale zakończyła występ w turnieju WTA 500 w Abu Zabi. Amerykanka uległa Greczynce Marii Sakkari, a w trzecim secie nie zdobyła nawet gema.</p>
     <p>Dwie najważniejsze organizacje tenisowe – ATP i WTA – ogłosiły, jakie turnieje mają się odbyć w 2021 roku. Czy się odbędą, to jednak odrębna sprawa.</p>
-
+<a href="https://sport.onet.pl/tenis/wta/australian-open-obie-polki-odpadly-w-kwalifikacjach-chwalinska-i-kawa/d6r5fy9">Wiecej informacji</a>
+<a href="https://sport.onet.pl/tenis/wta/australian-open-obie-polki-odpadly-w-kwalifikacjach-chwalinska-i-kawa/d6r5fy9">Wiecej informacji</a>
+<a href="https://sport.onet.pl/tenis/wta/australian-open-obie-polki-odpadly-w-kwalifikacjach-chwalinska-i-kawa/d6r5fy9">Wiecej informacji</a>
 </article>
 
 <ul>
