--- a/box.html
+++ b/box.html
@@ -11,7 +11,7 @@
 <style>
 body{
 
-background: #fff;
+background: #eee;
 
 }
 main-content{
@@ -31,9 +31,14 @@ main-content{
 
         <div id="main-content">
     <h1>CSS dla poczatkujacych</h1>
-        <div class="box">zawartosc</div>
-        <div class="box">zawartosc</div>
-
+        <div class="box dashed">dashed</div>
+        <div class="box dotted">dotted</div>
+        <div class="box double">double</div>
+        <div class="box groove">groove</div>
+        <div class="box inset">inset</div>
+        <div class="box outset">outset</div>
+        <div class="box ridge">ridge</div>
+        <div class="box solid">solid</div>
     </div>
     </body>
 
