--- a/index.html
+++ b/index.html
@@ -21,6 +21,15 @@
        
     </div>
 
+    <div id="Linki">
+        <a href=https://pl.wikipedia.org/wiki/Burd%C5%BC_Chalifa>Dubaj-Kalifa</a>
+        <a href=https://pl.wikipedia.org/wiki/Shanghai_Tower>Shanghai Tower</a>
+        <a href=https://pl.wikipedia.org/wiki/Abrad%C5%BC_al-Bajt>Abradż al-Bajt</a>
+        <a href=https://pl.wikipedia.org/wiki/Ping_An_Finance_Center>Ping An Finance Center</a>
+
+
+    </div>
+            
     <div id="Opis">
         <br>
         <h1>Burj Khalifa - Dubaj, Zjednoczone Emiraty Arabskie</h1>
