--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     
 </head>
 
-<body style="background-color:powderblue;">
+<body>
 
     <div id="Top">
         <img class="kalifa" src="zdj/kalifa" alt="Khalifa">
