--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 
-</html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Moja druga strona</title>
+    <title>Najwyzsze budynki</title>
     <link rel= "stylesheet" type= "text/css" href= "../Projekt1/main.css">
     
 </head>
